# scion

./: .bazelrc  BUILD.bazel  README.md  bootstrap_usage.txt  go.sum
acceptance/common/: docker.py  topogen.bzl
acceptance/router_priority/: BUILD.bazel  README.md  test.py
acceptance/router_priority/sender/: BUILD.bazel  main.go
control/cmd/control/: main.go
control/fabrid/: BUILD.bazel  fabrid_manager.go  fabrid_manager_test.go
control/fabrid/grpc/: fabrid_service.go  fabrid_service_test.go
daemon/: BUILD.bazel  daemon.go
daemon/cmd/daemon/: main.go
daemon/config/: config.go  sample.go
daemon/internal/servers/: BUILD.bazel  grpc.go  grpc_fabrid.go  grpc_fabrid_test.go  grpc_hummingbird.go  grpc_hummingbird_test.go
demo/fabrid/: BUILD.bazel  README.md  main.go  test.py
demo/router_priority/: BUILD.bazel
demo/router_priority/sender/: BUILD.bazel
doc/command/scion/: scion.rst  scion_fabrid.rst
docker/: BUILD.bazel
go/border/netconf/: interface.go
go/cert_srv/: BUILD.bazel  drkey_handler.go  drkey_tasks.go  main.go  setup.go
go/cert_srv/conf/: conf.go
go/cert_srv/internal/drkey/: BUILD.bazel  handler.go  handler_test.go  lvl1repHandler.go  lvl1rephandler.go  lvl1reqHandler.go  lvl1reqhandler.go  lvl2reqHandler.go  lvl2reqhandler.go  prefetcher.go  requester.go  requester_test.go  service_store.go  store.go  store_keeper.go  store_keeper_test.go  store_test.go  tasks.go  testcommon.go
go/cert_srv/internal/drkey/testdata/: as-A.crt  as-B.crt  asA-decrypt.key  asB-decrypt.key
go/co/: main.go
go/co/reservation/: BUILD.bazel  path.go  path_test.go  request_response.go
go/co/reservationstorage/: store.go
go/co/reservationstore/: BUILD.bazel  db_manip_test.go  drkey.go  drkey_test.go  export_test.go  keeper.go  keeper_test.go  manager.go  store.go  store_test.go
go/colibri-cmd/: BUILD.bazel  index.go  main.go  traceroute.go
go/cs/: cs.go  main.go
go/cs/beaconing/: BUILD.bazel  handler.go  handler_test.go  originator.go  propagator.go  writer.go  writer_test.go
go/cs/config/: drkey.go  drkey_test.go  sample.go
go/cs/segreq/: BUILD.bazel  fetcher.go
go/daemon/: main.go
go/integration/: common.go
go/integration/bootstrapper/: BUILD.bazel  main.go
go/lib/colibri/: BUILD.bazel  (+5 more)
go/lib/ctrl/drkey/: BUILD.bazel  lvl1_req.go  lvl2_req.go  protobuf_test.go  sv_req.go
go/lib/drkey/: BUILD.bazel  db.go  drkey.go  epoch.go  generic.go  level1.go  level2.go  protocol.go  protocol_test.go  secret_value.go  secret_value_test.go  specific.go  store.go  suite.go  types.go
go/lib/drkey/drkeydbsqlite/: BUILD.bazel  base_db.go  db.go  db_test.go  lvl1db.go  lvl2db.go  schema.go
go/lib/drkey/drkeyutil/: BUILD.bazel  util.go
go/lib/drkey/exchange/: BUILD.bazel  suite.go  suite_test.go
go/lib/drkey/fetcher/: BUILD.bazel  fetcher.go  fetching_test.go
go/lib/drkey/keystore/: BUILD.bazel  cache.go  cache_test.go  db.go  db_test.go
go/lib/drkey/keystore/mock_keystore/: BUILD.bazel  keystore.go
go/lib/drkey/mock_drkey/: BUILD.bazel  mock.go
go/lib/drkey/protocol/: BUILD.bazel  delegated.go  piskes.go  protocol.go  protocol_test.go  registry.go  scmp.go  standard.go
go/lib/drkey/sqlite/: lvl1db.go  lvl2db.go
go/lib/drkey/store/: db.go  db_test.go
go/lib/drkey/test/: mock_keys.go
go/lib/drkeystorage/mock_drkeystorage/: BUILD.bazel  drkeystorage.go
go/lib/drkeystore/: BUILD.bazel  store.go
go/lib/util/path/: BUILD.bazel  conversion.go
go/pkg/co/colibri/bootstrap/: BUILD.bazel  bootstrapper.go  bootstrapper_test.go  client_crypto.go  drkey_provider.go  drkey_provider_test.go  export_test.go  fake_mgr.go  provider.go  req_builder.go
go/pkg/co/colibri/bootstrap/crypto/: BUILD.bazel  encrpyt.go  verify.go
go/pkg/co/colibri/bootstrap/grpc/: BUILD.bazel  lvl2_fetcher.go
go/pkg/co/colibri/bootstrap/mock_bootstrap/: BUILD.bazel  mock.go
go/pkg/daemon/drkey/adapter/: BUILD.bazel  adapter.go
go/pktgen/: config.go
go/posix-gateway/: main.go
go/scion/: info.go
go/sciond/: BUILD.bazel  main.go
go/sig/: main.go
pkg/daemon/: BUILD.bazel  daemon.go  grpc_fabrid.go  grpc_hummingbird.go
pkg/experimental/fabrid/common/: BUILD.bazel  fabrid.go
pkg/experimental/fabrid/server/: BUILD.bazel  server.go
pkg/hummingbird/: BUILD.bazel  aes_consts.go  asm_amd64.s  asm_arm64.s  hummingbird.go  hummingbird_test.go  mac.go  mac_test.go  reservation.go  reservation_test.go  translate.go  utils_test.go
pkg/proto/control_plane/experimental/mock_experimental/: BUILD.bazel  mock.go
pkg/slayers/: BUILD.bazel  extn.go  scion.go
pkg/slayers/extension/: BUILD.bazel  fabrid_control.go  fabrid_control_test.go
pkg/slayers/path/hummingbird/: BUILD.bazel  asm_amd64.s  asm_arm64.s  asm_ppc64x.s  base.go  base_test.go  decoded.go  decoded_test.go  flyoverhopfield.go  flyoverhopfield_test.go  mac.go  mac_test.go  raw.go  raw_test.go
pkg/snet/: path_fabrid.go
private/hummingbirddb/: BUILD.bazel  db.go
private/hummingbirddb/mock_hummingbirddb/: BUILD.bazel  mock.go
private/storage/: BUILD.bazel  storage.go
private/storage/hummingbird/sqlite/: BUILD.bazel  schema.go  sqlite.go  sqlite_test.go
proto/: ctrl_pld.capnp  drkey_mgmt.capnp  sciond.capnp
proto/colibri/v1/: BUILD.bazel  colibri.proto  debug.proto  drkey.proto
python/beacon_server/: base.py
python/lib/: path_store.py  types.py
python/scion_elem/: scion_elem.py
python/topology/: common.py  go.py  sig.py  topo.py
router/: BUILD.bazel  connector.go  dataplane.go  dataplane_benchmark_test.go  dataplane_fabrid.go  dataplane_hbird.go  dataplane_hbird_test.go  dataplane_internal_test.go  dataplane_test.go  export_test.go
router/control/: conf.go
router/tokenbucket/: BUILD.bazel  tokenbucket_test.go
tools/: gomocks
tools/end2end/: BUILD.bazel  extras.go  fabrid.go  main.go
tools/end2end_hbird/: BUILD.bazel  main.go
tools/end2end_hbird_integration/: BUILD.bazel  main.go
tools/end2end_integration/: BUILD.bazel  hummingbird.go  main.go
tools/integration/: docker.go  integration.go
tools/topology/: common.py  go.py
topology/: bootstrapper.topo  multiple.topo
(+336 files in other folders)
