load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//:scion.bzl", "scion_go_binary")
load("//acceptance/common:topogen.bzl", "topogen_test")
load("//tools/lint:go.bzl", "go_library")

topogen_test(
    name = "test",
    src = "test.py",
    args = [
        "--executable=fabrid-demo:$(location //demo/fabrid:fabrid-demo)",
    ],
    data = ["//demo/fabrid:fabrid-demo"],
    fabrid = True,
    topo = "//topology:tiny4.topo",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/demo/fabrid",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/experimental/fabrid:go_default_library",
        "//pkg/experimental/fabrid/common:go_default_library",
        "//pkg/experimental/fabrid/server:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/extension:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/metrics:go_default_library",
        "//pkg/snet/path:go_default_library",
        "//private/tracing:go_default_library",
        "//tools/integration:go_default_library",
        "//tools/integration/integrationlib:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_opentracing_opentracing_go//ext:go_default_library",
    ],
)

scion_go_binary(
    name = "fabrid-demo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "fabrid",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
