load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hummingbird.go",
        "reservation.go",
        "translate.go",
    ],
    importpath = "github.com/scionproto/scion/pkg/hummingbird",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/daemon:go_default_library",
        "//pkg/slayers/path/hummingbird:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/path:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hummingbird_test.go",
        "reservation_test.go",
        "utils_test.go",
    ],
    deps = [
        ":go_default_library",
        "//pkg/slayers/path:go_default_library",
        "//pkg/slayers/path/hummingbird:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/path:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
