load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/bootstrapper",
    visibility = ["//visibility:private"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/integration:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "//go/pkg/co/colibri/bootstrap:go_default_library",
    ],
)

scion_go_binary(
    name = "bootstrapper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
