load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fabrid.go",
        "fabrid_control.go",
        "identifier.go",
    ],
    importpath = "github.com/scionproto/scion/pkg/slayers/extension",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/private/serrors:go_default_library",
        "//pkg/slayers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fabrid_control_test.go",
        "fabrid_test.go",
        "identifier_test.go",
    ],
    deps = [
        ":go_default_library",
        "//pkg/slayers:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
