load("//tools/lint:go.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "gomock")

gomock(
    name = "go_default_mock",
    out = "mock.go",
    interfaces = ["DB"],
    library = "//private/hummingbirddb:go_default_library",
    package = "mock_hummingbirddb",
)

go_library(
    name = "go_default_library",
    srcs = ["mock.go"],
    importpath = "github.com/scionproto/scion/private/hummingbirddb/mock_hummingbirddb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/hummingbird:go_default_library",
        "//private/hummingbirddb:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
