load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "lvl1_req.go",
        "lvl2_req.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/ctrl/drkey",
    visibility = ["//visibility:public"],
    deps = ["//go/lib/addr:go_default_library"],
)
