load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/scionproto/scion/go/lib/drkey/keystore",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/infra/modules/db:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["db_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/util:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
