load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["drkeystorage.go"],
    importpath = "github.com/scionproto/scion/go/lib/drkeystorage/mock_drkeystorage",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/drkey:go_default_library",
        "//go/lib/drkey/protocol:go_default_library",
        "//go/lib/infra:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
