load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["conversion.go"],
    importpath = "github.com/scionproto/scion/go/lib/util/path",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path:go_default_library",
        "//go/lib/snet:go_default_library",
    ],
)
