load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/scionproto/scion/pkg/experimental/fabrid/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/drkey:go_default_library",
        "//pkg/experimental/fabrid/common:go_default_library",
        "//pkg/experimental/fabrid/crypto:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/extension:go_default_library",
        "//pkg/snet:go_default_library",
    ],
)
