load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "asm_amd64.s",
        "asm_arm64.s",
        "asm_ppc64x.s",
        "mac.go",
    ],
    importpath = "github.com/scionproto/scion/pkg/slayers/path/hummingbird",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:amd64": [
            "//pkg/addr:go_default_library",
            "//pkg/slayers/path:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:arm64": [
            "//pkg/addr:go_default_library",
            "//pkg/slayers/path:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ppc64": [
            "//pkg/addr:go_default_library",
            "//pkg/slayers/path:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ppc64le": [
            "//pkg/addr:go_default_library",
            "//pkg/slayers/path:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = ["mac_test.go"],
    deps = [
        ":go_default_library",
        "//pkg/addr:go_default_library",
        "@com_github_dchest_cmac//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
