load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "schema.go",
        "sqlite.go",
    ],
    importpath = "github.com/scionproto/scion/private/storage/hummingbird/sqlite",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/hummingbird:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//private/hummingbirddb:go_default_library",
        "//private/storage/db:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["sqlite_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/hummingbird:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/private/xtest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
