load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bootstrapper.go",
        "drkey_provider.go",
        "provider.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/co/colibri/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservationstore:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/ctrl/seg:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/spath:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/pkg/proto/crypto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bootstrapper_test.go"],
    deps = [
        ":go_default_library",
        "//go/co/reservation:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/ctrl/seg:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/xtest:go_default_library",
        "//go/pkg/co/colibri/bootstrap/mock_bootstrap:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
