load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bootstrapper.go",
        "client_crypto.go",
        "drkey_provider.go",
        "req_builder.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/co/colibri/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservation/translate:go_default_library",
        "//go/co/reservationstorage:go_default_library",
        "//go/co/reservationstore:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/scrypto/signed:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path/scion:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/spath:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/co/colibri/bootstrap/crypto:go_default_library",
        "//go/pkg/co/colibri/bootstrap/grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "//go/pkg/proto/control_plane:go_default_library",
        "//go/pkg/trust:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bootstrapper_test.go",
        "drkey_provider_test.go",
        "export_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservationstorage/mock_reservationstorage:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/drkey/mock_drkey:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/xtest:go_default_library",
        "//go/pkg/co/colibri/bootstrap/mock_bootstrap:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
