load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["adapter.go"],
    importpath = "github.com/scionproto/scion/go/pkg/daemon/drkey/adapter",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/daemon:go_default_library",
        "//go/lib/drkey:go_default_library",
    ],
)
