load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "encrpyt.go",
        "verify.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/co/colibri/bootstrap/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/scrypto:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pkg/trust:go_default_library",
        "@org_golang_x_crypto//nacl/box:go_default_library",
    ],
)
