load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["lvl2_fetcher.go"],
    importpath = "github.com/scionproto/scion/go/pkg/co/colibri/bootstrap/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/drkey:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/proto/control_plane:go_default_library",
    ],
)
